// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match ModalPage snapshot with no data 1`] = `
.c2 {
  width: 1.8rem;
  height: 1.8rem;
}

.c3 {
  background: rgba(0,0,0,0.5);
  width: 100%;
  height: 100%;
  position: fixed;
  left: 0;
  top: 0;
  z-index: 2;
}

.c0 {
  width: 60%;
  background: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  padding: 2.4rem 3.2rem;
  z-index: 6;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c1 {
  position: absolute;
  right: 2rem;
  top: 2rem;
  cursor: pointer;
}

.c1 svg {
  width: 1.4rem;
}

@media (max-width:768px) {
  .c0 {
    text-align: center;
    width: 90%;
    padding: 3.2rem 1.4rem;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <svg
        class=" c2"
        version="1.1"
        viewBox="0 0 14 14"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <path
          d="M14 1.41L12.59 0L7 5.59L1.41 0L0 1.41L5.59 7L0 12.59L1.41 14L7 8.41L12.59 14L14 12.59L8.41 7L14 1.41Z"
          fill="currentColor"
        />
      </svg>
    </div>
    
    
  </div>
  <div
    class="c3"
  />
</div>
`;

exports[`should match ModalPage snapshot with title and description 1`] = `
.c2 {
  width: 1.8rem;
  height: 1.8rem;
}

.c5 {
  background: rgba(0,0,0,0.5);
  width: 100%;
  height: 100%;
  position: fixed;
  left: 0;
  top: 0;
  z-index: 2;
}

.c0 {
  width: 60%;
  background: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  padding: 2.4rem 3.2rem;
  z-index: 6;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c3 {
  font-weight: 600;
  font-size: 2.4rem;
  line-height: 3.6rem;
  margin: 0 0 1.4rem 0;
}

.c4 {
  font-weight: normal;
  font-size: 1.6rem;
  line-height: 3.6rem;
  margin: 0 0 1.4rem 0;
}

.c1 {
  position: absolute;
  right: 2rem;
  top: 2rem;
  cursor: pointer;
}

.c1 svg {
  width: 1.4rem;
}

@media (max-width:768px) {
  .c0 {
    text-align: center;
    width: 90%;
    padding: 3.2rem 1.4rem;
  }
}

@media (max-width:768px) {
  .c4 {
    line-height: 1;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <svg
        class=" c2"
        version="1.1"
        viewBox="0 0 14 14"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <path
          d="M14 1.41L12.59 0L7 5.59L1.41 0L0 1.41L5.59 7L0 12.59L1.41 14L7 8.41L12.59 14L14 12.59L8.41 7L14 1.41Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <h2
      class="c3"
    >
      Mock Title
    </h2>
    <p
      class="c4"
    >
      Mock Description
    </p>
  </div>
  <div
    class="c5"
  />
</div>
`;

exports[`should match ModalPage snapshot with title and description and buttons 1`] = `
.c4 {
  background: #212121;
  color: #ffffff;
  font-style: normal;
  font-weight: 600;
  font-size: 1.4rem;
  line-height: 2.4rem;
  text-align: center;
  border: none;
  padding: 1rem 5rem;
  width: 100%;
  font-family: inherit;
  cursor: pointer;
}

.c5 {
  background: none;
  color: #212121;
  border: 1px solid #212121;
}

.c6 {
  background: rgba(0,0,0,0.5);
  width: 100%;
  height: 100%;
  position: fixed;
  left: 0;
  top: 0;
  z-index: 2;
}

.c0 {
  width: 60%;
  background: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  padding: 2.4rem 3.2rem;
  z-index: 6;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c1 {
  font-weight: 600;
  font-size: 2.4rem;
  line-height: 3.6rem;
  margin: 0 0 1.4rem 0;
}

.c2 {
  font-weight: normal;
  font-size: 1.6rem;
  line-height: 3.6rem;
  margin: 0 0 1.4rem 0;
}

.c3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c3 button {
  margin: 0 1.4rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

@media (max-width:768px) {
  .c0 {
    text-align: center;
    width: 90%;
    padding: 3.2rem 1.4rem;
  }
}

@media (max-width:768px) {
  .c2 {
    line-height: 1;
  }
}

@media (max-width:768px) {
  .c3 button {
    width: 100%;
    margin: 0.4rem;
  }
}

<div>
  <div
    class="c0"
  >
    <h2
      class="c1"
    >
      Mock Title
    </h2>
    <p
      class="c2"
    >
      Mock Description
    </p>
    <div
      class="c3"
    >
      <button
        class="c4 c5"
      >
        Mock button
      </button>
      <button
        class="c4"
      >
        Mock button
      </button>
    </div>
  </div>
  <div
    class="c6"
  />
</div>
`;
